--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "babel-preset-stage-0": "6.5.0",
     "gulp": "3.9.0",
     "gulp-babel": "6.1.2",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "3.0.7",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "webpack": "1.12.13"
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "relative": "./node_modules/.bin/gulp relative",
+    "alias": "./node_modules/.bin/gulp alias"
   },
   "author": "Barney Powell",
   "license": "ISC"
